--- a/canvas.html
+++ b/canvas.html
@@ -7,13 +7,13 @@
   const canvas = document.getElementById('canvas');
   const grid = Grid.makeWith(canvas);
 
-  // Some nodes
+  // Add some nodes
   var grok = grid.addPluginNode(20, 20, 100, 60);
   var conditional = grid.addIfNode(200, 20, 100, 60);
   var mutate = grid.addPluginNode(380, 20, 100, 60);
   var drop = grid.addPluginNode(380, 120, 100, 60);
 
-  // Some connections
+  // Add some connections
   grok.connect(conditional);
   conditional.connect(IfNode.OUTPUT_TRUE, mutate);
   conditional.connect(IfNode.OUTPUT_FALSE, drop);
